# telegram-prompter

./: .bandit  .env.example  .gitignore  Dockerfile.admin  Dockerfile.orchestrator  Dockerfile.prompter  GATE-REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
admin/: __init__.py  config.py  main.py  requirements.txt
admin/templates/: index.html
admin/tests/: __init__.py  test_admin.py
config/: pipeline.yml
docs/: BUILD-CONTRACT.md  SPRINT-STATUS.md
orchestrator/: __init__.py  budget.py  decide.py  engine.py  mcp_client.py  requirements.txt  run.py  state.py
prompter/: __init__.py  __main__.py  requirements.txt  server.py
zukunftsbund-bottests/: .env.example  .gitignore  CLAUDE.md  README.md  feature_map.yaml  pyproject.toml  requirements.txt
zukunftsbund-bottests/.github/workflows/: test.yml
zukunftsbund-bottests/adapters/: base.py  http.py  n8n.py  sheets.py  telegram.py
zukunftsbund-bottests/assertions/: __init__.py  core.py
zukunftsbund-bottests/runner/: compare.py  engine.py  loader.py  models.py  notify.py  reporter.py  run.py
zukunftsbund-bottests/scripts/: __init__.py  make_session.py  select_tests.py  trend_dashboard.py
zukunftsbund-bottests/suites/content-autopilot/: cases.yaml
zukunftsbund-bottests/suites/kontakt-bot/: cases.yaml
zukunftsbund-bottests/suites/kontakt-bot/fixtures/: README.md
zukunftsbund-bottests/tests/: test_benchmark.py  test_change_detection.py  test_engine.py  test_judge.py  test_kontakt_bot_suite.py  test_loader.py  test_n8n.py  test_selection.py  test_sheet.py
(+5 files in other folders)
