[project]
name = "zukunftsbund-bottests"
version = "0.1.0"
description = "Szenariogetriebenes, kanalunabhängiges Test- & Benchmark-Framework für Telegram-Bots, n8n-Workflows und HTTP-Pipelines."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "telethon>=1.36",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
bottests = "runner.run:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["runner", "adapters", "assertions"]
